<resources>
    <string name="app_name">WeiDuApp</string>
    <string name="phone">手机号</string>
    <string name="mispwd">记住密码</string>
    <string name="fly_login">快速注册</string>
    <string name="login">登陆</string>
    <string name="tv_pwd">登陆密码</string>
    <string name="returnLogin">已有账户?立即登陆</string>
    <string name="yzm">验证码</string>
    <string name="reg">注册</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sousuo">搜索</string>
    <string name="sousuo_text">请输入您想要输搜索的商品</string>
    <string name="fast_login">快速登陆</string>
    <string name="hot">热量销售</string>
</resources>
