<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login_backgroud"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:orientation="vertical"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/login_icon_phone"
            android:drawablePadding="20dp"
            android:hint="@string/phone"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#ffffff"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffffff" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lin2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/lin3">

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/login_icon_lock"
            android:drawablePadding="20dp"
            android:hint="@string/tv_pwd"
            android:inputType="textPassword"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#ffffff"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffffff" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/lin3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin1">

        <EditText
            android:id="@+id/et_yz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/login_icon_verification"
            android:drawablePadding="20dp"
            android:hint="@string/yzm"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#ffffff"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffffff" />
    </LinearLayout>


    <ImageView
        android:id="@+id/show_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/login_icon_eye"
        app:layout_constraintBottom_toBottomOf="@+id/lin2"
        app:layout_constraintRight_toRightOf="@id/lin2" />




    <TextView
        android:id="@+id/returnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginRight="36dp"
        android:text="@string/returnLogin"
        android:textColor="#fff"
        app:layout_constraintRight_toRightOf="@id/lin2"
        app:layout_constraintTop_toBottomOf="@+id/lin2" />


    <TextView
        android:id="@+id/reg"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="36dp"
        android:layout_marginLeft="36dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_shape_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="120dp"
        android:text="@string/reg"
        android:gravity="center"
        android:textColor="#ff5f71"
        android:textSize="18sp" />


</android.support.constraint.ConstraintLayout>