<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/Shop_Home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <ImageView
            android:id="@+id/shop_class"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_margin="16dp"
            android:src="@drawable/common_nav_btn_menu"
            app:layout_constraintBottom_toBottomOf="@id/et_seleceshop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/et_seleceshop"
            app:layout_constraintTop_toTopOf="@id/et_seleceshop" />

        <EditText
            android:id="@+id/et_seleceshop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#bbb"
            android:textSize="14sp"
            android:paddingLeft="20dp"
            style="@null"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toRightOf="@id/shop_class"
            app:layout_constraintRight_toLeftOf="@id/select"
            />

        <ImageView
            android:id="@+id/select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/common_nav_btn_search"
            android:padding="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/et_seleceshop"
            app:layout_constraintBottom_toBottomOf="@id/et_seleceshop"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/et_seleceshop"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/et_seleceshop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp">

        </android.support.v7.widget.RecyclerView>
        <com.jcodecraeer.xrecyclerview.XRecyclerView
            android:id="@+id/xlv2"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/et_seleceshop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp">

        </com.jcodecraeer.xrecyclerview.XRecyclerView>

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/shop_view"
        android:layout_width="match_parent"
        android:background="#fff"
        android:layout_height="match_parent">
        <ImageView
            android:visibility="gone"
            android:id="@+id/shop_class1"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_margin="16dp"
            android:src="@drawable/common_nav_btn_menu"
            app:layout_constraintBottom_toBottomOf="@id/et_seleceshop1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/et_seleceshop1"
            app:layout_constraintTop_toTopOf="@id/et_seleceshop1" />

        <EditText
            android:visibility="gone"
            android:id="@+id/et_seleceshop1"
            android:layout_width="0dp"
            android:background="@drawable/et_shape_bg"
            android:layout_height="wrap_content"
            android:hint="@string/sousuo_text"
            android:textColor="#bbb"
            android:textSize="14sp"
            android:paddingLeft="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toRightOf="@id/shop_class1"
            app:layout_constraintRight_toLeftOf="@id/select1"
            />

        <TextView
            android:visibility="gone"
            android:id="@+id/select1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sousuo"
            android:padding="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/et_seleceshop1"
            app:layout_constraintBottom_toBottomOf="@id/et_seleceshop1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/et_seleceshop1"/>

        <TextView
            android:id="@+id/hot"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/hot"
            android:gravity="center"
            android:textColor="#f84"
            android:visibility="invisible"
            android:background="@drawable/bitmap"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_seleceshop1"/>
        <TextView
            android:id="@+id/style"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/hot"
            android:gravity="center"
            android:textColor="#00f"
            android:visibility="invisible"
            android:background="@drawable/bitmap_style"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_seleceshop1"/>

        <TextView
            android:id="@+id/live"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="生活品质"
            android:gravity="center"
            android:textColor="#f00"
            android:visibility="invisible"
            android:background="@drawable/bitmap_live"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_seleceshop1"/>

        <com.jcodecraeer.xrecyclerview.XRecyclerView
            android:id="@+id/xlv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/et_seleceshop1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="85dp">
        </com.jcodecraeer.xrecyclerview.XRecyclerView>

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>